refactor: adds message exception and refactor code